# RLHF-training-pipeline

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
notebooks/: annotation.ipynb
scripts/: run_annotation.py  run_dpo.py  run_ppo.py
src/: annotation.py  app.py  config.py  data.py  models.py  trainer_dpo.py  trainer_ppo.py  utils.py
tests/: test_basic.py
