[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlhf-pipeline"
version = "0.1.0"
description = "A modular RLHF training pipeline with Annotation, DPO, and PPO support."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jagadish Sunil Pednekar"},
]
dependencies = [
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "trl>=0.4.7",
    "peft>=0.4.0",
    "bitsandbytes>=0.40.0",
    "accelerate>=0.21.0",
    "ipywidgets>=8.0.0",
    "wandb>=0.15.0",
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.2.0",
    "gradio>=3.35.0",  # Added for the new UI
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
